<resources>
    <string name="app_name">Seekho Assignment</string>
    <string name="anime_poster">Anime Poster</string>
    <string name="ratings">Ratings:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="synopsis">Synopsis</string>
    <string name="at">%1$s at %2$s (%3$s)</string>
    <string name="genres">Genres:</string>
    <string name="broadcast">Broadcast:</string>
    <string name="episodes">Episodes:</string>
    <string name="ratings_">Ratings:</string>
</resources>