<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AnimeDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivAnimePoster"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/anime_poster"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal35"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <WebView
                android:id="@+id/trailerWebView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal35"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

            <TextView
                android:id="@+id/tvSynopsisHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/synopsis"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal35" />


            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/synopsis"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvSynopsisHeader"
                app:layout_constraintTop_toBottomOf="@id/tvSynopsisHeader" />

            <TextView
                android:id="@+id/tvGenresHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvSynopsisHeader"
                app:layout_constraintTop_toBottomOf="@+id/tvSynopsis" />

            <TextView
                android:id="@+id/tvGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/tvGenresHeader"
                app:layout_constraintTop_toTopOf="@id/tvGenresHeader" />

            <TextView
                android:id="@+id/tvCastHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broadcast"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvSynopsisHeader"
                app:layout_constraintTop_toBottomOf="@+id/tvGenresHeader" />

            <TextView
                android:id="@+id/tvCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/tvCastHeader"
                app:layout_constraintTop_toTopOf="@id/tvCastHeader" />

            <TextView
                android:id="@+id/tvEpisodesHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episodes"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvCastHeader"
                app:layout_constraintTop_toBottomOf="@+id/tvCastHeader" />

            <TextView
                android:id="@+id/tvEpisodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/tvEpisodesHeader"
                app:layout_constraintTop_toTopOf="@id/tvEpisodesHeader" />

            <TextView
                android:id="@+id/tvRatingsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratings_"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvEpisodesHeader"
                app:layout_constraintTop_toBottomOf="@+id/tvEpisodesHeader" />

            <TextView
                android:id="@+id/tvRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/tvRatingsHeader"
                app:layout_constraintTop_toTopOf="@id/tvRatingsHeader" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>